cf docker version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url= jdbc:postgresql://${POSTGRES_PORT_5432_TCP_ADDR}:${POSTGRES_PORT_5432_TCP_PORT}/demo
-spring.datasource.username=hbyuan27
-spring.datasource.password=demo
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url= jdbc:postgresql://${POSTGRES_PORT_5432_TCP_ADDR}:${POSTGRES_PORT_5432_TCP_PORT}/demo
+#spring.datasource.username=hbyuan27
+#spring.datasource.password=demo
+#spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
